--- a/src/index.html
+++ b/src/index.html
@@ -1,31 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Test</title>
-	<link rel="stylesheet" href="css/style.min.css">
-</head>
-<body>
-	<section class="test">
-		<div class="slider_container">
-			<div class="slider">
-				<div class="slider_line">
-					<div class="item"><img src="images/slide1.jpeg" alt="img"></div>
-					<div class="item"><img src="images/slide2.jpeg" alt="img"></div>
-					<div class="item"><img src="images/slide3.jpeg" alt="img"></div>
-				</div>
-				
-			</div>
-			<a class="prev" onclick="previousSlide()"><</a>
-	
-			<a class="next" onclick="nextSlide()">></a>
-		</div>
-		
-	</section>
-	
+<html>
+	<head>
+		<title>Создание вкладок на JavaScript</title>
+		<link rel="stylesheet" href="css/style.min.css">
+	</head>
+	<body>
+		<div class="container">
+			<ul class="container--tabs">
+				<li class="tab tab--active">London</li>
+				<li class="tab">New York</li>
+				<li class="tab">Singapore</li>
+			</ul>
 
-	<script src="js/script.js"></script>
-</body>
+			<div class="container__content">
+				<div class="content content--active">
+					<h2>London</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloribus necessitatibus possimus.</p>
+					<p><img src="images/london.jpg" width="396" /></p>
+				</div>
+				<div class="content">
+					<h2>NYC</h2>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur doloribus necessitatibus possimus.</p>
+					<p><img src="images/nyc.jpg" width="396" /></p>
+				</div>
+				<div class="content">
+					<h2>Singapore</h2>
+					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Laboriosam esse voluptas minus autem, veniam dolor, debitis consequuntur dignissimos libero quibusdam consequatur. Enim, pariatur deserunt. Officiis!</p>
+					<p><img src="images/sg.jpg" width="396" /></p>
+				</div>
+			</div>
+		</div>
+
+		<script src="js/script.js"></script>
+	</body>
 </html>
